--- a/package.json
+++ b/package.json
@@ -2,27 +2,29 @@
   "name": "fcc-exercise-tracker",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": "14.15.4"
+  },
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc | nodemon ./build/app.js",
-    "start": "npm build && node ./build/app.js",
-    "debug": "export DEBUG=app* && npm dev"
+    "build": "tsc -b",
+    "dev": "tsc -w | nodemon ./dist/app.js",
+    "start": "export DEBUG=app* && node ./dist/app.js --trace-deprecation",
+    "debug": "export DEBUG=app* && npm run dev"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "http-errors": "~1.6.3",
     "mongoose": "^5.12.0",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
     "@types/morgan": "^1.9.2",
+    "@types/node": "^14.14.35",
     "typescript": "^4.2.3"
   }
 }
