--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,14 @@
   "compilerOptions": {
     "target": "es2016",
     "module": "commonjs",
-    "outDir": "build",
+    "declaration": true,
+    "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
     "inlineSourceMap": true,
     "moduleResolution": "node",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": "./",
   },
-  "include":["**/*.ts"]
+  "exclude": ["node_modules", "dist"]
 }
